force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Contrat</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contrats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>