force-app/main/default/objects/Contract__c/fields/BER__c.field-meta.xml
<CustomField>
    <fullName>BER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BER</label>
    <referenceTo>BER__c</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>