force-app/main/default/objects/Contract__c/fields/Code_statut_contrat__c.field-meta.xml
<CustomField>
    <fullName>Code_statut_contrat__c</fullName>
    <description>Code du statut du contrat</description>
    <label>Code statut contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>