force-app/main/default/objects/Contract__c/fields/Compte_client_associe__c.field-meta.xml
<CustomField>
    <fullName>Compte_client_associe__c</fullName>
    <label>Compte client associé</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats Client</relationshipLabel>
    <relationshipName>ContratsClient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>