force-app/main/default/objects/Contract__c/fields/Compte_concession_associe__c.field-meta.xml
<CustomField>
    <fullName>Compte_concession_associe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte concession associé</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats (Compte concession associé)</relationshipLabel>
    <relationshipName>Contrats1</relationshipName>
    <type>Lookup</type>
</CustomField>