force-app/main/default/objects/Contract__c/fields/Contact_client_associe__c.field-meta.xml
<CustomField>
    <fullName>Contact_client_associe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact client associé</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contrats (Contact client associé)</relationshipLabel>
    <relationshipName>Contrats1</relationshipName>
    <type>Lookup</type>
</CustomField>