force-app/main/default/objects/Contract__c/fields/Contact_vendeur_associe__c.field-meta.xml
<CustomField>
    <fullName>Contact_vendeur_associe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact vendeur associé</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>