force-app/main/default/objects/Contract__c/fields/Cout_de_kilometrage_minoritaire__c.field-meta.xml
<CustomField>
    <fullName>Cout_de_kilometrage_minoritaire__c</fullName>
    <label>Coût de kilométrage minoritaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>