force-app/main/default/objects/Contract__c/fields/Date_de_debut_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut_de_contrat__c</fullName>
    <label>Date de début de contrat</label>
    <type>Date</type>
</CustomField>