force-app/main/default/objects/Contract__c/fields/Date_de_fin_de_contrat_reelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_contrat_reelle__c</fullName>
    <label>Date de fin de contrat réelle</label>
    <type>Date</type>
</CustomField>