force-app/main/default/objects/Contract__c/fields/Date_de_l_alerte__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_alerte__c</fullName>
    <description>Date de l&apos;alerte</description>
    <label>Date de l&apos;alerte</label>
    <type>Date</type>
</CustomField>