force-app/main/default/objects/Contract__c/fields/Date_de_la_premiere_echeance_originale__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_premiere_echeance_originale__c</fullName>
    <label>Date de la première échéance originale</label>
    <type>Date</type>
</CustomField>