force-app/main/default/objects/Contract__c/fields/Date_de_prelevement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_prelevement__c</fullName>
    <label>Date de prélèvement</label>
    <type>Date</type>
</CustomField>