force-app/main/default/objects/Contract__c/fields/Date_de_restitution_reelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_restitution_reelle__c</fullName>
    <label>Date de restitution réelle</label>
    <type>Date</type>
</CustomField>