force-app/main/default/objects/Contract__c/fields/Date_de_restitution_theorique__c.field-meta.xml
<CustomField>
    <fullName>Date_de_restitution_theorique__c</fullName>
    <label>Date de restitution théorique</label>
    <type>Date</type>
</CustomField>