force-app/main/default/objects/Contract__c/fields/Date_de_transfert__c.field-meta.xml
<CustomField>
    <fullName>Date_de_transfert__c</fullName>
    <label>Date de transfert</label>
    <type>Date</type>
</CustomField>