force-app/main/default/objects/Contract__c/fields/Date_du_premier_impaye__c.field-meta.xml
<CustomField>
    <fullName>Date_du_premier_impaye__c</fullName>
    <label>Date du premier impayé</label>
    <type>Date</type>
</CustomField>