force-app/main/default/objects/Contract__c/fields/Date_fin_de_contrat_apres_prolongation__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_de_contrat_apres_prolongation__c</fullName>
    <label>Date fin de contrat après prolongation</label>
    <type>Date</type>
</CustomField>