force-app/main/default/objects/Contract__c/fields/Departement_de_gestion__c.field-meta.xml
<CustomField>
    <fullName>Departement_de_gestion__c</fullName>
    <label>Département de gestion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liste à voir avec VWFS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>