force-app/main/default/objects/Contract__c/fields/Depot_de_garantie__c.field-meta.xml
<CustomField>
    <fullName>Depot_de_garantie__c</fullName>
    <label>Dépôt de garantie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>