force-app/main/default/objects/Contract__c/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <label>Durée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A voir avec VW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>