force-app/main/default/objects/Contract__c/fields/Duree_du_contrat_original__c.field-meta.xml
<CustomField>
    <fullName>Duree_du_contrat_original__c</fullName>
    <label>Durée du contrat original</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>