force-app/main/default/objects/Contract__c/fields/EKIPID__c.field-meta.xml
<CustomField>
    <fullName>EKIPID__c</fullName>
    <externalId>true</externalId>
    <label>EKIPID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>