force-app/main/default/objects/Contract__c/fields/Encours_a_la_date_du_jour__c.field-meta.xml
<CustomField>
    <fullName>Encours_a_la_date_du_jour__c</fullName>
    <label>Encours à la date du jour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>