force-app/main/default/objects/Contract__c/fields/Gage_publication__c.field-meta.xml
<CustomField>
    <fullName>Gage_publication__c</fullName>
    <label>Gage/publication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>