force-app/main/default/objects/Contract__c/fields/Gestionnaire__c.field-meta.xml
<CustomField>
    <fullName>Gestionnaire__c</fullName>
    <label>Gestionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A définir ?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>