force-app/main/default/objects/Contract__c/fields/Immatriculation__c.field-meta.xml
<CustomField>
    <fullName>Immatriculation__c</fullName>
    <externalId>true</externalId>
    <label>Immatriculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>