force-app/main/default/objects/Contract__c/fields/Impaye__c.field-meta.xml
<CustomField>
    <fullName>Impaye__c</fullName>
    <label>Impayé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>