force-app/main/default/objects/Contract__c/fields/isInterne__c.field-meta.xml
<CustomField>
    <fullName>isInterne__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine si un contrat est attaché  à un client interne.</description>
    <label>Interne</label>
    <type>Checkbox</type>
</CustomField>