force-app/main/default/objects/Contract__c/fields/Jalon_du_bien__c.field-meta.xml
<CustomField>
    <fullName>Jalon_du_bien__c</fullName>
    <label>Jalon du bien</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champs sur KSIOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>