force-app/main/default/objects/Contract__c/fields/Jalon_du_contrat__c.field-meta.xml
<CustomField>
    <fullName>Jalon_du_contrat__c</fullName>
    <label>Jalon du contrat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepté Définitif</fullName>
            </value>
            <value>
                <fullName>Accepté Définitif - Auto</fullName>
            </value>
            <value>
                <fullName>Accepté sous réserve - Auto</fullName>
            </value>
            <value>
                <fullName>Accepté sous réserve - Docs Auto</fullName>
            </value>
            <value>
                <fullName>AFSP</fullName>
            </value>
            <value>
                <fullName>AFST</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Bon à payer demandé</fullName>
            </value>
            <value>
                <fullName>Bon à payer validé</fullName>
            </value>
            <value>
                <fullName>Complétude</fullName>
            </value>
            <value>
                <fullName>Contre proposition envoyée</fullName>
            </value>
            <value>
                <fullName>Contre proposition préparée</fullName>
            </value>
            <value>
                <fullName>Demande sans suite</fullName>
            </value>
            <value>
                <fullName>Dossier gelé</fullName>
            </value>
            <value>
                <fullName>Dossier payé</fullName>
            </value>
            <value>
                <fullName>Erreur sur le type d&apos;acteur</fullName>
            </value>
            <value>
                <fullName>Etude</fullName>
            </value>
            <value>
                <fullName>Etude - Auto</fullName>
            </value>
            <value>
                <fullName>Fraude calculée</fullName>
            </value>
            <value>
                <fullName>Homonyme</fullName>
            </value>
            <value>
                <fullName>KO Technique</fullName>
            </value>
            <value>
                <fullName>Paiement en cours</fullName>
            </value>
            <value>
                <fullName>Paiement KO</fullName>
            </value>
            <value>
                <fullName>Proposition soumise</fullName>
            </value>
            <value>
                <fullName>Refus</fullName>
            </value>
            <value>
                <fullName>Refus - Auto</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
            <value>
                <fullName>Rejeté pour une contre proposition</fullName>
            </value>
            <value>
                <fullName>Scoring en cours</fullName>
            </value>
            <value>
                <fullName>Selfpaiement demandé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>