force-app/main/default/objects/Contract__c/fields/Kilometrage_contrat__c.field-meta.xml
<CustomField>
    <fullName>Kilometrage_contrat__c</fullName>
    <label>Kilométrage contrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>