force-app/main/default/objects/Contract__c/fields/KSIOPID__c.field-meta.xml
<CustomField>
    <fullName>KSIOPID__c</fullName>
    <description>Id dans backoffice Cassiopae</description>
    <externalId>true</externalId>
    <label>KSIOPID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>