force-app/main/default/objects/Contract__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALFA ROMEO</fullName>
            </value>
            <value>
                <fullName>APRILIA</fullName>
            </value>
            <value>
                <fullName>A revoir</fullName>
                <isActive>false</isActive>
                <label>A revoir</label>
            </value>
            <value>
                <fullName>ARO</fullName>
            </value>
            <value>
                <fullName>ASTON MARTIN</fullName>
            </value>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>AUSTIN</fullName>
            </value>
            <value>
                <fullName>AUTOBIANCHI</fullName>
            </value>
            <value>
                <fullName>AUTRES</fullName>
            </value>
            <value>
                <fullName>AUTRES MOTOS</fullName>
            </value>
            <value>
                <fullName>BENELLI</fullName>
            </value>
            <value>
                <fullName>BENTLEY</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>BMW Moto</fullName>
            </value>
            <value>
                <fullName>BUELL</fullName>
            </value>
            <value>
                <fullName>BUGATI</fullName>
            </value>
            <value>
                <fullName>CADILLAC</fullName>
            </value>
            <value>
                <fullName>CAGIVA</fullName>
            </value>
            <value>
                <fullName>CHATENET</fullName>
            </value>
            <value>
                <fullName>CHEVROLET</fullName>
            </value>
            <value>
                <fullName>CHRYSLER</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>CORVETTE</fullName>
            </value>
            <value>
                <fullName>CUPRA</fullName>
            </value>
            <value>
                <fullName>DACIA</fullName>
            </value>
            <value>
                <fullName>DAEWOO</fullName>
            </value>
            <value>
                <fullName>DAIHATSU</fullName>
            </value>
            <value>
                <fullName>DAIMLER</fullName>
            </value>
            <value>
                <fullName>DATSUN</fullName>
            </value>
            <value>
                <fullName>DERBI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>