force-app/main/default/objects/Contract__c/fields/Mensuel_avec_services_TTC__c.field-meta.xml
<CustomField>
    <fullName>Mensuel_avec_services_TTC__c</fullName>
    <label>Mensuel avec services TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>