force-app/main/default/objects/Contract__c/fields/Mensuel_fi_TTC__c.field-meta.xml
<CustomField>
    <fullName>Mensuel_fi_TTC__c</fullName>
    <label>Mensuel fi. TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>