force-app/main/default/objects/Contract__c/fields/Mode_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_paiement__c</fullName>
    <label>Mode de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prélèvement</fullName>
            </value>
            <value>
                <fullName>Virement</fullName>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>CHQ</fullName>
                <isActive>false</isActive>
                <label>CHQ</label>
            </value>
            <value>
                <fullName>PRE</fullName>
                <isActive>false</isActive>
                <label>PRE</label>
            </value>
            <value>
                <fullName>PREL</fullName>
                <isActive>false</isActive>
                <label>PREL</label>
            </value>
            <value>
                <fullName>VIR</fullName>
                <isActive>false</isActive>
                <label>VIR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>