force-app/main/default/objects/Contract__c/fields/Modele__c.field-meta.xml
<CustomField>
    <fullName>Modele__c</fullName>
    <label>Modèle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A revoir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>