force-app/main/default/objects/Contract__c/fields/Montant_de_financement_TTC__c.field-meta.xml
<CustomField>
    <fullName>Montant_de_financement_TTC__c</fullName>
    <label>Montant de financement TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>