force-app/main/default/objects/Contract__c/fields/Montant_de_la_participation__c.field-meta.xml
<CustomField>
    <fullName>Montant_de_la_participation__c</fullName>
    <label>Montant de la participation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>