force-app/main/default/objects/Contract__c/fields/Montant_finance_original__c.field-meta.xml
<CustomField>
    <fullName>Montant_finance_original__c</fullName>
    <label>Montant financé original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>