force-app/main/default/objects/Contract__c/fields/Montant_solde_client__c.field-meta.xml
<CustomField>
    <fullName>Montant_solde_client__c</fullName>
    <description>Montant du solde client</description>
    <label>Montant solde client</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>