force-app/main/default/objects/Contract__c/fields/Nombre_d_echeances_reportees_non_reglees__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_echeances_reportees_non_reglees__c</fullName>
    <label>Nombre d’échéances reportées non réglées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>