force-app/main/default/objects/Contract__c/fields/Nombre_d_impayes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_impayes__c</fullName>
    <label>Nombre d’impayés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>