force-app/main/default/objects/Contract__c/fields/Numero_de_boite_contrat__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_boite_contrat__c</fullName>
    <label>Numéro de boite (contrat)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>