force-app/main/default/objects/Contract__c/fields/Numero_de_chassis__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_chassis__c</fullName>
    <externalId>true</externalId>
    <label>Numéro de châssis</label>
    <length>17</length>
    <type>Text</type>
</CustomField>