force-app/main/default/objects/Contract__c/fields/Numero_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_contrat__c</fullName>
    <externalId>true</externalId>
    <label>Numéro de contrat</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>