force-app/main/default/objects/Contract__c/fields/Partenaire_contact__c.field-meta.xml
<CustomField>
    <fullName>Partenaire_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenaire contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contrats (Partenaire contact)</relationshipLabel>
    <relationshipName>Contrats2</relationshipName>
    <type>Lookup</type>
</CustomField>