force-app/main/default/objects/Contract__c/fields/Premier_loyer_TTC__c.field-meta.xml
<CustomField>
    <fullName>Premier_loyer_TTC__c</fullName>
    <label>Premier loyer TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>