force-app/main/default/objects/Contract__c/fields/Prestation_de_service__c.field-meta.xml
<CustomField>
    <fullName>Prestation_de_service__c</fullName>
    <label>Prestation de service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assurance - Garantie capital auto</fullName>
            </value>
            <value>
                <fullName>Assurance - Perte Financier</fullName>
            </value>
            <value>
                <fullName>Assurances (décès invalidité, …)</fullName>
            </value>
            <value>
                <fullName>Carte carburant</fullName>
            </value>
            <value>
                <fullName>Entretien (piece d&apos;usure-révision)</fullName>
            </value>
            <value>
                <fullName>Entretien VO</fullName>
            </value>
            <value>
                <fullName>Extension de garantie</fullName>
            </value>
            <value>
                <fullName>Maintenance (piece d&apos;usure-révision + ttes les recos constructeurs + prolongation extension de garantie)</fullName>
            </value>
            <value>
                <fullName>Pneus</fullName>
            </value>
            <value>
                <fullName>Vehicule d&apos;attente</fullName>
            </value>
            <value>
                <fullName>Véhicule de remplacement</fullName>
            </value>
            <value>
                <fullName>Véhicule d’attente</fullName>
            </value>
            <value>
                <fullName>Wallbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>