force-app/main/default/objects/Contract__c/fields/Prix_catalogue__c.field-meta.xml
<CustomField>
    <fullName>Prix_catalogue__c</fullName>
    <label>Prix catalogue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>