force-app/main/default/objects/Contract__c/fields/Prix_d_achat_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_d_achat_TTC__c</fullName>
    <label>Prix d’achat TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>