force-app/main/default/objects/Contract__c/fields/Produit_financier__c.field-meta.xml
<CustomField>
    <fullName>Produit_financier__c</fullName>
    <label>Produit financier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crédit</fullName>
            </value>
            <value>
                <fullName>Crédit Bail</fullName>
            </value>
            <value>
                <fullName>LLD</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>CRV</fullName>
            </value>
            <value>
                <fullName>ASV</fullName>
            </value>
            <value>
                <fullName>CRB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>