force-app/main/default/objects/Contract__c/fields/Reception_contrat_original__c.field-meta.xml
<CustomField>
    <fullName>Reception_contrat_original__c</fullName>
    <label>Réception contrat original</label>
    <type>Date</type>
</CustomField>