force-app/main/default/objects/Contract__c/fields/Reception_Mandat_SEPA_original__c.field-meta.xml
<CustomField>
    <fullName>Reception_Mandat_SEPA_original__c</fullName>
    <label>Réception Mandat SEPA original</label>
    <type>Date</type>
</CustomField>