force-app/main/default/objects/Contract__c/fields/RefId__c.field-meta.xml
<CustomField>
    <fullName>RefId__c</fullName>
    <description>Id du référentiel 360</description>
    <externalId>true</externalId>
    <label>RefId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>