force-app/main/default/objects/Contract__c/fields/Renouvellement__c.field-meta.xml
<CustomField>
    <fullName>Renouvellement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renouvellement</label>
    <type>Checkbox</type>
</CustomField>