force-app/main/default/objects/Contract__c/fields/RollUpAccountFieldsFormula__c.field-meta.xml
<CustomField>
    <fullName>RollUpAccountFieldsFormula__c</fullName>
    <formula>IF(
OR(
ABS((MONTH( TODAY() ) +(12*(YEAR( TODAY() )-YEAR( Date_de_fin_de_contrat_prevue__c )))- MONTH( Date_de_fin_de_contrat_prevue__c )))&lt;3,
(AND(ABS((MONTH( TODAY() ) +(12*(YEAR( TODAY() )-YEAR( Date_de_fin_de_contrat_prevue__c )))- MONTH( Date_de_fin_de_contrat_prevue__c )))=3,(DAY(TODAY())-DAY(Date_de_fin_de_contrat_prevue__c ))&gt;=0))
),
3,
IF(
OR(
ABS((MONTH( TODAY() ) +(12*(YEAR( TODAY() )-YEAR( Date_de_fin_de_contrat_prevue__c )))- MONTH( Date_de_fin_de_contrat_prevue__c )))&lt;6,
(AND(ABS((MONTH( TODAY() ) +(12*(YEAR( TODAY() )-YEAR( Date_de_fin_de_contrat_prevue__c )))- MONTH( Date_de_fin_de_contrat_prevue__c )))=6,(DAY(TODAY())-DAY(Date_de_fin_de_contrat_prevue__c ))&gt;=0))
),
6,
IF(
OR(
ABS((MONTH( TODAY() ) +(12*(YEAR( TODAY() )-YEAR( Date_de_fin_de_contrat_prevue__c )))- MONTH( Date_de_fin_de_contrat_prevue__c )))&lt;12,
(AND(ABS((MONTH( TODAY() ) +(12*(YEAR( TODAY() )-YEAR( Date_de_fin_de_contrat_prevue__c )))- MONTH( Date_de_fin_de_contrat_prevue__c )))=12,(DAY(TODAY())-DAY(Date_de_fin_de_contrat_prevue__c ))&gt;=0))
),
12,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RollUpAccountFieldsFormula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>