force-app/main/default/objects/Contract__c/fields/RollUpAccountFieldsValue__c.field-meta.xml
<CustomField>
    <fullName>RollUpAccountFieldsValue__c</fullName>
    <label>RollUpAccountFieldsValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>