force-app/main/default/objects/Contract__c/fields/TAEG__c.field-meta.xml
<CustomField>
    <fullName>TAEG__c</fullName>
    <label>TAEG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>