force-app/main/default/objects/Contract__c/fields/Valeur_residuelle_TTC__c.field-meta.xml
<CustomField>
    <fullName>Valeur_residuelle_TTC__c</fullName>
    <label>Valeur résiduelle TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>