force-app/main/default/objects/Contract__c/fields/Verrouille__c.field-meta.xml
<CustomField>
    <fullName>Verrouille__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verrouillé</label>
    <type>Checkbox</type>
</CustomField>