force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Numero_de_contrat__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>